--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGODB_URL=mongodb://127.0.0.1:27017/ochdb
 JWT_SECRET=mysecret
 MAIL_ID=luisfelipebaquerol
 MP=ecvfotghjtbzpcxl
+CLOUD_NAME='ddjrnxblc'
+API_KEY='537885868116969'
+SECRET_KEY='_4-u8JFRtRV9bMz_SYnfgT9iDIU'
