--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "sharp": "^0.32.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "uniquid": "^1.1.4"
   }
 }
